--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
+                                    <fileset dir="${project.build.directory}/hoops-${upstream.version}/lib" />
                                     <fileset dir="${project.build.directory}/hoops-${upstream.version}/dist" />
                                 </move>
                             </target>
