--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>hoops</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
     <name>Hoops</name>
     <description>WebJar package of Daniel St. Jules' Hoops library.</description>
     <url>http://webjars.org</url>
@@ -56,7 +56,7 @@
         <url>http://github.com/webjars/hoops</url>
         <connection>scm:git:https://github.com/webjars/hoops.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/hoops.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>hoops-0.2.1</tag>
     </scm>
 
     <dependencies>
